WEB-3711 Fixed styling problem on IE9

--- a/fid-web/src/main/webapp/style/newCss/loto/procedures.css
+++ b/fid-web/src/main/webapp/style/newCss/loto/procedures.css
@@ -24,8 +24,9 @@
 }
 
 .blankSlate img {
-    display: table-caption;
-    margin: 50px auto 25px;
+    padding-left: 413px;
+    padding-top: 50px;
+    padding-bottom: 25px;
 }
 
 .blankSlate p {
